Add CRC-16 multi-shard routing, Docker release workflow, and W4 performance report
Route single-key commands to one of N ShardExecutor threads via CRC16(key) % N.
Broadcast commands (DBSIZE, KEYS, FLUSHDB, FLUSHALL) fan out to all shards through
a ScatterFuture that merges partial replies before writing one response to the client.

New: Crc16 (CRC-16/XMODEM, Redis Cluster-compatible hash-slot algorithm with hashtag
extraction), ScatterFuture (AtomicInteger countdown, per-command merge strategies),
ShardRouter (routing + fan-out logic, shard-0 fast path for metadata commands).

ParsedCommand gains scatter/shardIndex fields for scatter-mode copies. Config gains
shardCount (--shards N / MNEMO_SHARDS). MnemoServer builds N independent shards.
CommandInboundHandler and MnemoChannelInitializer updated to use ShardRouter.

ShardRouterTest: 10 tests covering CRC-16 known values, hashtag co-location, key
distribution across 4 shards, SET/GET across shards, DBSIZE sum, FLUSHDB broadcast.

.github/workflows/release.yml: on semver tag push, builds the Gradle distribution,
runs tests, and publishes to GHCR via multi-stage docker/Dockerfile.

benchmarking-methodology.md: filled pool benchmark (258 vs 69 Mops/s, 3.7x), rehash
spike (3.3 vs 112.6 ms, 34x), Dict scaling (p99 ≤ 1 µs at 1 M keys). ADR 0014.